--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mercado Liebre</title>
 
-    <link href="css/stylesheet.css" rel="stylesheet">
+    <link href="/css/stylesheet.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
